few updates and images

--- a/src/pages/gallery/Gallery.module.scss
+++ b/src/pages/gallery/Gallery.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
     & .banner {
-        background-image: url('../../assets/images/about.jpg');
+        background-image: url('../../assets/images/gallery.jpg');
         background-size: cover;
         height: 20rem;
         display: flex;
