--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
  & .banner {
-    background-image: url('../../assets/images/about.jpg');
+    background-image: url('../../assets/images/contact.jpg');
     background-size: cover;
     height: 20rem;
     display: flex;
@@ -62,6 +62,10 @@
 & .form {
   width: calc(100% - 20rem);
   color: $textDark;
+  & iframe {
+    border: 0;
+            border-radius: 0.5rem;
+  }
 }
 & .contacts {
   width: 20rem;
