--- a/src/pages/vision/Vision.module.scss
+++ b/src/pages/vision/Vision.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
  & .banner {
-    background-image: url('../../assets/images/about.jpg');
+    background-image: url('../../assets/images/vision.jpg');
     background-size: cover;
     height: 20rem;
     display: flex;
