--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue.eot");
-  src: url("../fonts/Revue.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue.woff2") format("woff2"),
-    url("../fonts/Revue.woff") format("woff"),
-    url("../fonts/Revue.ttf") format("truetype");
+  src: url("~@fonts/Revue.eot");
+  src: url("~@fonts/Revue.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue.woff2") format("woff2"),
+    url("~@fonts/Revue.woff") format("woff"),
+    url("~@fonts/Revue.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -14,11 +14,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue_1.eot");
-  src: url("../fonts/Revue_1.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue_1.woff2") format("woff2"),
-    url("../fonts/Revue_1.woff") format("woff"),
-    url("../fonts/Revue_1.ttf") format("truetype");
+  src: url("~@fonts/Revue_1.eot");
+  src: url("~@fonts/Revue_1.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue_1.woff2") format("woff2"),
+    url("~@fonts/Revue_1.woff") format("woff"),
+    url("~@fonts/Revue_1.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -26,11 +26,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue-Italic.eot");
-  src: url("../fonts/Revue-Italic.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue-Italic.woff2") format("woff2"),
-    url("../fonts/Revue-Italic.woff") format("woff"),
-    url("../fonts/Revue-Italic.ttf") format("truetype");
+  src: url("~@fonts/Revue-Italic.eot");
+  src: url("~@fonts/Revue-Italic.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue-Italic.woff2") format("woff2"),
+    url("~@fonts/Revue-Italic.woff") format("woff"),
+    url("~@fonts/Revue-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -38,11 +38,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue_cyr.eot");
-  src: url("../fonts/Revue_cyr.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue_cyr.woff2") format("woff2"),
-    url("../fonts/Revue_cyr.woff") format("woff"),
-    url("../fonts/Revue_cyr.ttf") format("truetype");
+  src: url("~@fonts/Revue_cyr.eot");
+  src: url("~@fonts/Revue_cyr.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue_cyr.woff2") format("woff2"),
+    url("~@fonts/Revue_cyr.woff") format("woff"),
+    url("~@fonts/Revue_cyr.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -50,11 +50,11 @@
 
 @font-face {
   font-family: "Revue BT";
-  src: url("../fonts/RevueBT-Regular.eot");
-  src: url("../fonts/RevueBT-Regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/RevueBT-Regular.woff2") format("woff2"),
-    url("../fonts/RevueBT-Regular.woff") format("woff"),
-    url("../fonts/RevueBT-Regular.ttf") format("truetype");
+  src: url("~@fonts/RevueBT-Regular.eot");
+  src: url("~@fonts/RevueBT-Regular.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/RevueBT-Regular.woff2") format("woff2"),
+    url("~@fonts/RevueBT-Regular.woff") format("woff"),
+    url("~@fonts/RevueBT-Regular.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -62,11 +62,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue_2.eot");
-  src: url("../fonts/Revue_2.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue_2.woff2") format("woff2"),
-    url("../fonts/Revue_2.woff") format("woff"),
-    url("../fonts/Revue_2.ttf") format("truetype");
+  src: url("~@fonts/Revue_2.eot");
+  src: url("~@fonts/Revue_2.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue_2.woff2") format("woff2"),
+    url("~@fonts/Revue_2.woff") format("woff"),
+    url("~@fonts/Revue_2.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -74,11 +74,11 @@
 
 @font-face {
   font-family: "Revue";
-  src: url("../fonts/Revue-Bold.eot");
-  src: url("../fonts/Revue-Bold.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Revue-Bold.woff2") format("woff2"),
-    url("../fonts/Revue-Bold.woff") format("woff"),
-    url("../fonts/Revue-Bold.ttf") format("truetype");
+  src: url("~@fonts/Revue-Bold.eot");
+  src: url("~@fonts/Revue-Bold.eot?#iefix") format("embedded-opentype"),
+    url("~@fonts/Revue-Bold.woff2") format("woff2"),
+    url("~@fonts/Revue-Bold.woff") format("woff"),
+    url("~@fonts/Revue-Bold.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
