--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,7 +5,9 @@
   transition: background-color 0.25s ease-in-out,
   border-bottom 0.25s ease-in-out;
   background-color: $bg;
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 100;
   @include lg {
     transition: background-color 0.05s ease-in-out;
   }
@@ -174,17 +176,26 @@
   }
 
   &.fixed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
-    background-color: transparent;
     border-bottom: 1px solid $secondary;
+    transition: all 0.5s ease-in-out;
+    background-color: transparent;
     & header {
       background-color: darken(rgba($bg, 0.75), 10%);
+      transition: all 0.5s ease-in-out;
       padding: 0.75rem 0;
+      overflow: hidden;
       @include lg {
         padding: 1.25rem 0;
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: $bg;
+        top: 0;
+        z-index: -1;
+        filter: blur(150px);
       }
     }
   }
