--- a/src/pages/mission/Mission.module.scss
+++ b/src/pages/mission/Mission.module.scss
@@ -26,7 +26,10 @@
  }
  & :global(.container-global) {
   padding: 5rem 0;
- }
+@include md {
+  padding: 5rem 1rem;
+}
+}
  & p {
   color: $textDark;
   margin: 2rem 0;
