Vision & Mission in same page and creating new page for blogs

--- a/src/pages/vision-mission/VisionMission.module.scss
+++ b/src/pages/vision-mission/VisionMission.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
  & .banner {
-    background-image: url('../../assets/images/vision.jpg');
+    background-image: url('../../assets/images/mission.jpg');
     background-size: cover;
     height: 20rem;
     display: flex;
