--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,3 +1,4 @@
+
 .d-flex {
     display: flex;
 }
@@ -92,4 +93,37 @@ $base-rem: 1rem;
 
 .no-scroll {
   overflow: hidden !important;
+}
+
+.arrow-button {
+  &.variant-rounded-outlined-global {
+    width: 6rem;
+    height: 2.75rem;
+    background-color: transparent;
+    border-color: rgba($bg, 0.175);
+    margin-top: 1.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    & span {
+      transition: ease-in-out 0.85s all;
+    }
+    & svg {
+      height: 1rem;
+      width: 1rem;
+      opacity: 0.5;
+      margin-left: 0.5rem;
+      transition: ease-in-out 0.5s all;
+    }
+    &:hover {
+      background-color: $secondary;
+      & span {
+        text-decoration: none;
+        transition: ease-in-out 0.5s all;
+      }
+      & svg {
+        transform: translateX(5px) !important;
+      }
+    }
+  }
 }
