--- a/src/pages/blogs/Blogs.module.scss
+++ b/src/pages/blogs/Blogs.module.scss
@@ -1,37 +1,196 @@
 @import "assets/scss/variables.scss";
 
 .wrapper {
- & .banner {
-    background-image: url('../../assets/images/mission.jpg');
-    background-size: cover;
-    height: 20rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-attachment: fixed;
+  color: $textDark;
+  margin: 2.5rem 0;
+  & :global(.container-global) {
+    @include md {
+      padding: 0 1rem;
+    }
+  }
+  & h1 {
+    margin-bottom: 2rem;
+  }
+
+  & .sub-title {
+    margin-bottom: 5rem;
     position: relative;
+
     &:after {
       content: '';
-      background-color: rgba($bg, 0.25);
       position: absolute;
-      width: 100%;
-      height: 100%;
+      bottom: -1rem;
       left: 0;
-      top: 0;
+      width: 5rem;
+      background-color: $primary;
+      height: 0.125rem;
     }
-    & * {
-      position: relative;
-      z-index: 10;
+  }
+
+  & .blog-wrapper {
+    display: flex;
+    flex-direction: column; 
+  }
+
+  & .latest-blog {
+    flex: 3; 
+    margin-right: 2rem; 
+    @include md {
+      margin-right: 0; 
     }
- }
- & :global(.container-global) {
-  padding: 5rem 0;
-@include md {
-  padding: 5rem 1rem;
+    & :global(.blog-title-global) {
+      @include sm {
+        font-size: $textLarge - 2px;
+      }
+    }
+    & :global(.date-global) {
+      @include xsm {
+        margin: 0.25rem 0 0.5rem;
+        font-size: $textSmall;
+      }
+    }
+    & :global(.arrow-button) {
+      @include sm {
+        margin-top: 1rem;
+      }
+    }
+    & :global(.category-global) {
+      @include sm {
+        font-size: $textSmall;
+      }
+    }
+    & :global(.blog-title-wrapper-global) {
+      @include sm {
+        width: 100%;
+        bottom: 0;
+        padding: 1rem;
+      }
+    }
+  }
+
+  & .latest-blog-item {
+    height: auto; 
+    margin-bottom: 0;
+  }
+
+  & .popular-blogs {
+    flex: 1;
+    @include md {
+      display: none;
+    }
+    & .popular-blog-item {
+      background-color: transparent;
+      box-shadow: none;
+      height: auto;
+      padding-bottom: 1rem;
+      margin-bottom: 1rem;
+      border-bottom: 1px solid rgba($textDark, 0.25);
+      & img {
+        display: none;
+      }
+      & :global(.blog-title-wrapper-global) {
+        padding: 0;
+        position: unset;
+        width: 100%;
+        background-color: transparent;
+        cursor: pointer;
+        @include sm {
+          width: 100%;
+          bottom: 0;
+        }
+        & :global(.hidden-data-global) {
+          display: none;
+          opacity: 0;
+        }
+        &:hover {
+          & :global(.hidden-data-global) {
+            display: none;
+            opacity: 0;
+          }
+        }
+        & :global(.blog-title-global) {
+          font-size: $textLarge;
+          color: rgba($textDark, 0.85);
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+        }
+        &:hover {
+          & :global(.blog-title-global) {
+            color: $textDark;
+          }
+        }
+      }
+      &:hover {
+        border-bottom-color: $primary;
+      }
+    }
+  }
+
+  & .blogs-item {
+    margin-bottom: 2rem;
+  }
+  & .remaining-blogs {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    margin-top: 2.5rem;
+    @include md {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include sm {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    & .remaining-blog-item {
+      margin-bottom: 0;
+      & :global(.blog-title-global) {
+        font-size: $textMedium;
+        @include sm {
+          font-size: $textLarge - 2px;
+        }
+      }
+      & :global(.avatar-global) {
+        display: none;
+      }
+      & :global(.avatar-global) {
+        display: none;
+        @include sm {
+          display: flex;
+        }
+      }
+      & :global(.arrow-button) {
+        display: none;
+        @include sm {
+          display: block;
+          margin-top: 1rem;
+        }
+      }
+      & :global(.date-global) {
+        font-size: $textSmall;
+        margin-bottom: 0;
+        @include sm {
+          font-size: inherit;
+          margin: 0.25rem 0 1rem;
+        }
+        @include xsm {
+          margin: 0.25rem 0 0.5rem;
+          font-size: $textSmall;
+        }
+      }
+      & :global(.category-global) {
+        font-size: $textSmall;
+      }
+      & :global(.blog-title-wrapper-global) {
+        cursor: pointer;
+        @include sm {
+          width: 100%;
+          bottom: 0;
+        }
+      }
+    }
+  }
 }
-}
- & p {
-  color: $textDark;
-  margin: 2rem 0;
- }
-}
+
+
